created flow with JWT token for the user to store user's credentials
